# IJRR_WBLC

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
Addition/Data_Manager/: CMakeLists.txt  DataSave.cpp  DataSave.h  data_protocol.h
Addition/ExternalControl/: CMakeLists.txt  ExternalControl.cpp  ExternalControl.hpp
DynaController/NAO_Controller/: CMakeLists.txt  NAO_DynaCtrl_Definition.h  NAO_Exam_StateProvider.hpp  NAO_Exam_interface.cpp  NAO_Exam_interface.hpp  NAO_StateEstimator.cpp  NAO_StateEstimator.hpp  NAO_StateProvider.cpp  NAO_StateProvider.hpp  NAO_interface.cpp  NAO_interface.hpp
DynaController/NAO_Controller/ContactSet/: FixedBodyContact.cpp  FixedBodyContact.hpp  SingleContact.cpp  SingleContact.hpp
DynaController/NAO_Controller/CtrlSet/: BodyCtrl.cpp  BodyCtrl.hpp  BodyFootPlanningCtrl.cpp  BodyFootPlanningCtrl.hpp  JPosCtrl.cpp  JPosCtrl.hpp  SingleContactTransCtrl.cpp  SingleContactTransCtrl.hpp  SwingPlanningCtrl.hpp
DynaController/NAO_Controller/NAOTestConfig/: CTRL_left_walking_swing.yaml  CTRL_move_to_target_height.yaml  CTRL_right_walking_swing.yaml  CTRL_stance.yaml  CTRL_trans.yaml  INTERFACE_setup.yaml  PLANNER_velocity_reversal.yaml  SIM_sr_sim_setting.yaml  TEST_body_ctrl.yaml  TEST_walking.yaml
DynaController/NAO_Controller/StateEstimator/: BasicAccumulation.cpp  BasicAccumulation.hpp
DynaController/NAO_Controller/TaskSet/: JPosTask.cpp  JPosTask.hpp  LinkHeightTask.cpp  LinkHeightTask.hpp  LinkOriTask.cpp  LinkOriTask.hpp  LinkPosTask.cpp  LinkPosTask.hpp  SelectedJPosTask.cpp  SelectedJPosTask.hpp
DynaController/NAO_Controller/TestSet/: BodyCtrlTest.cpp  BodyCtrlTest.hpp  JointCtrlTest.cpp  JointCtrlTest.hpp  WalkingTest.cpp  WalkingTest.hpp
DynaController/Valkyrie_Controller/: CMakeLists.txt  StateEstimator_RBDL_test.cpp  Valkyrie_DynaCtrl_Definition.h  Valkyrie_StateEstimator.cpp  Valkyrie_StateEstimator.hpp  Valkyrie_StateProvider.cpp  Valkyrie_StateProvider.hpp  Valkyrie_interface.cpp  Valkyrie_interface.hpp
DynaController/Valkyrie_Controller/ContactSet/: FixedBodyContact.cpp  FixedBodyContact.hpp  SingleContact.cpp  SingleContact.hpp
DynaController/Valkyrie_Controller/CtrlSet/: BodyCtrl.cpp  BodyCtrl.hpp  BodyFootPlanningCtrl.cpp  BodyFootPlanningCtrl.hpp  DoubleContactTransCtrl.cpp  DoubleContactTransCtrl.hpp  SingleContactTransCtrl.cpp  SingleContactTransCtrl.hpp  SwingPlanningCtrl.hpp
DynaController/Valkyrie_Controller/StateEstimator/: BasicAccumulation.cpp  BasicAccumulation.hpp
DynaController/Valkyrie_Controller/TaskSet/: JPosTask.cpp  JPosTask.hpp  LinkGlobalSelectPosTask.cpp  LinkGlobalSelectPosTask.hpp  LinkGlobalYZPosTask.cpp  LinkGlobalYZPosTask.hpp  LinkOriTask.cpp  LinkOriTask.hpp  LinkPosSelectTask.cpp  LinkPosSelectTask.hpp  LinkPosTask.cpp  LinkPosTask.hpp  LinkRelativePosTask.cpp  LinkRelativePosTask.hpp  SelectedJPosTask.cpp  SelectedJPosTask.hpp
DynaController/Valkyrie_Controller/TestSet/: BodyCtrlTest.cpp  BodyCtrlTest.hpp  WalkingTest.cpp  WalkingTest.hpp
DynaController/Valkyrie_Controller/ValkyrieTestConfig/: CTRL_left_walking_swing.yaml  CTRL_move_to_target_height.yaml  CTRL_right_walking_swing.yaml  CTRL_stance.yaml  CTRL_trans.yaml  INTERFACE_setup.yaml  PLANNER_velocity_reversal.yaml  SIM_sr_sim_setting.yaml  TEST_body_ctrl.yaml  TEST_walking.yaml
ExternalSource/Optimizer/: CMakeLists.txt
ExternalSource/Optimizer/Goldfarb/: Array.hh  CMakeLists.txt  QuadProg++.cc
ExternalSource/rbdl/: .gitignore  CMakeLists.txt  Kinematics.cc  urdfreader.cc  urdfreader.h
Planner/PIPM_FootPlacementPlanner/: CMakeLists.txt  README.md  Reversal_LIPM_Planner.cpp  Reversal_LIPM_Planner.hpp
RobotSystems/DracoBip/: CMakeLists.txt  DracoBip.urdf  DracoBip_Definition.h  DracoBip_Dyn_Model.cpp  DracoBip_Dyn_Model.hpp  DracoBip_Kin_Model.cpp  DracoBip_Kin_Model.hpp  DracoBip_Model.cpp  DracoBip_Model.hpp
Simulator/: CMakeLists.txt  SIM_config.h.cmake
Simulator/SimulationModel/: README.md
Simulator/SimulationModel/Atlas/: atlas_v3.urdf  atlas_v3_no_head.sdf  atlas_v3_no_head.urdf  ground.urdf
Simulator/SimulationModel/DracoBip/: DracoBip.urdf
Simulator/SimulationModel/Ground/: SnowTerrain.dae  box_check.dae  ground_terrain.urdf  ground_terrain_check.urdf  marble_dot.dae  tile_blue.dae  tile_brick_square.dae  tile_check.dae  tile_green.dae  tile_light.dae  tile_marble_diamond.dae  tile_marble_dot.dae  tile_marble_white.dae  tile_wood.dae
Simulator/SimulationModel/Mercury_Model/: Updated_foot.3ds  abduction.3ds  mercury_no_visual.urdf  mercury_passive.urdf  mercury_srlib (copy).urdf  mercury_srlib.urdf
Simulator/SimulationModel/NAO_Model/: ground_terrain.urdf  trs.dae
Simulator/SimulationModel/Valkyrie/: ground.urdf  tile_brown.dae  tile_marble_check  tile_marble_check.dae  tile_marble_check.psd  valkyrie_sim.urdf  valkyrie_simple.urdf
Simulator/srSimulator/: .gitignore  CMakeLists.txt  srconfig.h.cmake
Simulator/srSimulator/LieGroup/: CMakeLists.txt  LieGroup.cpp  LieGroup.h  LieGroup.inl
Simulator/srSimulator/Renderer/: CMakeLists.txt  Model3DS.cpp  Model3DS.h  ModelMesh.cpp  ModelMesh.h  SROpenSceneGraph.cpp  SROpenSceneGraph.h  SimpleRenderer.cpp  SimpleRenderer.h  SimpleViewer.cpp  SimpleViewer.h  Texture.cpp  Texture.h
Simulator/srSimulator/assimp/: CMakeLists.txt
Simulator/srSimulator/common/: CMakeLists.txt  types.h  utils.cpp  utils.h
Simulator/srSimulator/libpng/: CMakeLists.txt
Simulator/srSimulator/srDyn/: CMakeLists.txt  srBallJoint.cpp  srBallJoint.h  srClosedLoopConstraint.cpp  srClosedLoopConstraint.h  srCollision.cpp  srCollision.h  srCollisionPair.cpp  srConstraint.cpp  srConstraint.h  srContactConstraint.cpp  srContactConstraint.h  srDYN.cpp  srDYN.h  srEntity.cpp  srEntity.h  srGeometryInfo.cpp  srGeometryInfo.h  srIRSensor.cpp  srIRSensor.h  srISLAND.cpp  srISLAND.h  (+32 more)
Utils/: BSplineBasic.h  CMakeLists.txt  Clock.hpp  DataManager.cpp  DataManager.hpp  LQR.cpp  LQR.hpp  dynacore_pThread.cpp  dynacore_pThread.hpp  minjerk_one_dim.cpp  minjerk_one_dim.hpp  pseudo_inverse.cpp  pseudo_inverse.hpp  utilities.cpp  utilities.hpp  wrap_eigen.cpp  wrap_eigen.hpp
(+535 files in other folders)
